# MultiVelo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.rst  meta.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: github_action_tests.yml
Examples/: MultiVelo_Fig4.ipynb  MultiVelo_Fig6.ipynb  MultiVelo_Template.ipynb  adam_example.ipynb  cell_annotations.tsv  dtw_example.R  neural_net_example.ipynb
Examples/seurat_wnn/: seurat_wnn.R
docs/: MultiVelo_Demo.nblink  MultiVelo_Fig2.nblink  MultiVelo_Fig3.nblink  MultiVelo_Fig4.nblink  MultiVelo_Fig5.nblink  MultiVelo_Fig6.nblink  MultiVelo_Template.nblink  adam_example.nblink  api.rst  conf.py  index.rst  neural_net_example.nblink  requirements.txt  test.nblink  usage.rst
docs/_static/: custom.css
docs/source/: conf.py  index.rst  usage.rst
multivelo/: dynamical_chrom_func.py
multivelo_demo/: MultiVelo_Fig4.ipynb  MultiVelo_Fig6.ipynb  MultiVelo_Template.ipynb  test.ipynb
multivelo_demo/seurat_wnn/: nn_cells.txt  nn_idx.txt  seurat_wnn.R
src/multivelo/: __init__.py  _version.py  auxiliary.py  dynamical_chrom_func.py  logging.py  mv_logging.py  pyWNN.py  settings.py  steady_chrom_func.py
src/multivelo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/multivelo/pyWNN/: LICENSE  pyWNN.py  readme.txt
test_files/: feature_linkage.bedpe  nn_dist.txt  peak_annotation.tsv
tests/: fig2_test.py  fig4_test.py
train_neural_network/: agg_fig_data.ipynb  sim_data_from_rates.ipynb  train_neural_net.ipynb  training_tools.py
train_neural_network/data/rates/fig_rates_train/: alpha.txt  alpha_c.txt  beta.txt  gamma.txt
train_neural_network/neural_nets/: dir0.pt
