[metadata]
name = multivelo
version = 0.1.3
author = Chen Li
author_email = chlseven@umich.edu
description = Multi-omic extension of single-cell RNA velocity
long_description = file: README.rst
url = https://github.com/welch-lab/MultiVelo
keywords =
    RNA velocity
    single-cell
    transcriptomics
    chromatin
    epigenetic
    epigenomic
    gene regulation
    multi-omic
    dynamical
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    anndata>=0.7.5
    scanpy>=1.5
    scvelo>=0.2.3
    loompy>=2.0.12
    umap-learn>=0.3.10
    h5py>=2.10.0
    numba>=0.41.0
    numpy>=1.17
    scipy>=1.4.1
    pandas>=0.23
    scikit-learn>=0.23.0
    matplotlib>=3.3.0
    seaborn>=0.11.0
    tqdm
    joblib
    ipywidgets<=7.7.1

[options.package_data]
* = neural_nets/*

[options.packages.find]
where = src
exclude =
    tests
    multivelo_demo
    docs
